objects/CommandCenter__Manual_Steps_Environments__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate this step has been completed</inlineHelpText>
        <label>Is Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Manual_Steps__c</fullName>
        <label>Manual Steps</label>
        <referenceTo>CommandCenter__Manual_steps_tracker__c</referenceTo>
        <relationshipLabel>Manual Steps Environments</relationshipLabel>
        <relationshipName>Release_Manual_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__SF_Environment__c</fullName>
        <label>SF Environment</label>
        <referenceTo>CommandCenter__SF_Environment__c</referenceTo>
        <relationshipLabel>Manual Steps Environments</relationshipLabel>
        <relationshipName>Release_Manual_Steps_Env</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Manual Steps Environments</label>
    <nameField>
        <displayFormat>MSE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Steps Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>